zulip/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: database
    spec:
      containers:
        - name: database
          image: zulip/zulip-postgresql:14
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: 5432tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres14
      volumes:
        - name: postgres14
          persistentVolumeClaim:
            claimName: postgres14
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: memcached
  template:
    metadata:
      labels:
        io.kompose.service: memcached
    spec:
      containers:
        - name: memcached
          image: memcached:alpine
          imagePullPolicy: IfNotPresent
          command:
            - sh
            - -euc
            - |
              echo 'mech_list: plain' > "$SASL_CONF_PATH"
              echo "zulip@$HOSTNAME:$MEMCACHED_PASSWORD" > "$MEMCACHED_SASL_PWDB"
              echo "zulip@localhost:$MEMCACHED_PASSWORD" >> "$MEMCACHED_SASL_PWDB"
              exec memcached -S
          ports:
            - containerPort: 11211
              name: 11211tcp
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5672
              name: 5672tcp
              protocol: TCP
            - containerPort: 5671
              name: 5671tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq
      volumes:
        - name: rabbitmq
          persistentVolumeClaim:
            claimName: rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - name: redis
          image: redis:8.6-alpine
          imagePullPolicy: IfNotPresent
          args:
            - sh
            - -euc
            - |
              echo "requirepass '$REDIS_PASSWORD'" > /etc/redis.conf
              exec redis-server /etc/redis.conf
          ports:
            - containerPort: 6379
              name: 6379tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: redis
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zulip
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zulip
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: zulip
    spec:
      containers:
        - name: zulip
          image: zulip/docker-zulip:11.6-0
          imagePullPolicy: IfNotPresent
          command:
            - /data/custom/entrypoint.sh
          livenessProbe:
            exec:
              command:
                - '! (supervisorctl status | grep zulip | grep -v RUNNING )'
            failureThreshold: 120
            periodSeconds: 10
            timeoutSeconds: 10
          ports:
            - containerPort: 80
              name: 80tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: zulip
      volumes:
        - name: zulip
          persistentVolumeClaim:
            claimName: zulip
