zulip/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zulip
spec:
  selector:
    io.kompose.service: zulip
  ports:
    - name: '9414'
      port: 9414
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    io.kompose.service: redis
  ports:
    - name: '6379'
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    io.kompose.service: rabbitmq
  ports:
    - name: '5672'
      port: 5672
      targetPort: 5672
    - name: '5671'
      port: 5671
      targetPort: 5671
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
spec:
  selector:
    io.kompose.service: memcached
  ports:
    - name: '11211'
      port: 11211
      targetPort: 11211
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    io.kompose.service: database
  ports:
    - name: '5432'
      port: 5432
      targetPort: 5432
